[gd_scene load_steps=13 format=2]

[ext_resource path="res://PlayArea.gd" type="Script" id=1]
[ext_resource path="res://Stars/stars.png" type="Texture" id=2]
[ext_resource path="res://Walls/Walls.gd" type="Script" id=3]
[ext_resource path="res://Walls/body_bg.png" type="Texture" id=4]
[ext_resource path="res://Walls/body.png" type="Texture" id=5]
[ext_resource path="res://Walls/outline.png" type="Texture" id=6]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=7]

[sub_resource type="ParticlesMaterial" id=1]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 960, 540, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 167.79
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.31
angular_velocity = 146.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Gravity", "Initial Velocity", "Scale" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 960, 960 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 960, 960 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 960, 960 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 960, 960 )

[node name="PlayArea" type="Node2D"]

script = ExtResource( 1 )

[node name="Stars" type="Particles2D" parent="." index="0"]

position = Vector2( 1024, 512 )
emitting = true
amount = 32
lifetime = 3.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 1 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time" ]

[node name="CannonLayer" type="Node2D" parent="." index="1" groups=[
"CannonLayer",
]]

[node name="LeftWall" type="KinematicBody2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 0, 540 )
input_pickable = false
collision_layer = 1024
collision_mask = 1024
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="BG" type="Sprite" parent="LeftWall" index="0"]

self_modulate = Color( 0.0705882, 0.0705882, 0.576471, 1 )
position = Vector2( -968, -25 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="BG2" type="Sprite" parent="LeftWall" index="1"]

self_modulate = Color( 0.0705882, 0.0705882, 0.576471, 1 )
position = Vector2( -968, -25 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Body" type="Sprite" parent="LeftWall" index="2"]

self_modulate = Color( 0.875, 0.410156, 0, 1 )
position = Vector2( -968, -25 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Outline" type="Sprite" parent="LeftWall" index="3"]

position = Vector2( -4, -25 )
z_index = 10
z_as_relative = false
texture = ExtResource( 6 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall" index="4"]

visible = false
position = Vector2( -957, -25 )
shape = SubResource( 2 )

[node name="RightWall" type="KinematicBody2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 1920, 540 )
input_pickable = false
collision_layer = 2048
collision_mask = 2048
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="BG" type="Sprite" parent="RightWall" index="0"]

self_modulate = Color( 0, 0, 0.541176, 1 )
position = Vector2( 963, -25 )
rotation = -3.14159
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Body" type="Sprite" parent="RightWall" index="1"]

self_modulate = Color( 0.875, 0.410156, 0, 1 )
position = Vector2( 963, -25 )
rotation = 3.14159
texture = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Outline" type="Sprite" parent="RightWall" index="2"]

position = Vector2( -1, -25 )
z_index = 10
z_as_relative = false
texture = ExtResource( 6 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall" index="3"]

visible = false
position = Vector2( 963, -25 )
shape = SubResource( 3 )

[node name="TopWall" type="KinematicBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 960, 0 )
input_pickable = false
collision_layer = 4096
collision_mask = 4096
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="BG" type="Sprite" parent="TopWall" index="0"]

self_modulate = Color( 0, 0, 0.541176, 1 )
position = Vector2( 0, -960 )
rotation = 1.5708
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Body" type="Sprite" parent="TopWall" index="1"]

self_modulate = Color( 0, 0.472656, 0.0849304, 1 )
position = Vector2( 0, -960 )
rotation = 1.5708
texture = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Outline" type="Sprite" parent="TopWall" index="2"]

self_modulate = Color( 0, 0, 0.382812, 1 )
position = Vector2( -2.89599e-05, 4 )
rotation = 1.5708
texture = ExtResource( 6 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall" index="3"]

visible = false
position = Vector2( 0, -960 )
shape = SubResource( 4 )

[node name="BottomWall" type="KinematicBody2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 960, 1080 )
input_pickable = false
collision_layer = 8192
collision_mask = 8192
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="BG" type="Sprite" parent="BottomWall" index="0"]

self_modulate = Color( 0, 0, 0.541176, 1 )
position = Vector2( 0, 968 )
rotation = -1.5708
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Body" type="Sprite" parent="BottomWall" index="1"]

self_modulate = Color( 0, 0.47451, 0.0823529, 1 )
position = Vector2( 0, 968 )
rotation = 4.71239
texture = ExtResource( 5 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Outline" type="Sprite" parent="BottomWall" index="2"]

self_modulate = Color( 0, 0, 0.382812, 1 )
position = Vector2( 0, 4 )
rotation = 1.5708
texture = ExtResource( 6 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall" index="3"]

visible = false
position = Vector2( 0, 968 )
shape = SubResource( 5 )

[node name="Player" parent="." index="6" instance=ExtResource( 7 )]

position = Vector2( 1536, 768 )

[node name="BulletLayer" type="Node2D" parent="." index="7" groups=[
"BulletLayer",
]]


